[package]
name = "fift"
description = "Rust implementation of the Fift esoteric language"
repository = "https://github.com/broxus/fift"
version = "0.2.2"
edition = "2024"
rust-version = "1.88"
include = ["src/**/*.rs", "src/**/*.fif", "LICENSE-*", "README.md"]
license = "MIT OR Apache-2.0"

[lib]
name = "fift"

[workspace]
members = ["proc", "cli", "libs"]

[dependencies]
ahash = "0.8"
anyhow = "1.0"
base64 = "0.22"
bitflags = "2.9.1"
crc = "3.0"
hex = "0.4"
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
rand = "0.9"
sha2 = "0.10"
thiserror = "2.0"
tracing = "0.1.41"
tycho-crypto = { version = "0.4.0", features = ["rand9"] }
unicode-segmentation = "1.0"

tycho-types = { version = "0.2.1", default-features = false, features = [
    "sync",
    "base64",
    "models",
] }
tycho-vm = { version = "0.2.1", features = ["dump", "tracing"] }

fift-proc = { path = "./proc", version = "=0.2.2" }
