[package]
name = "fift-cli"
description = "A CLI for the Fift esoteric language interpreter"
repository = "https://github.com/broxus/fift"
version = "0.1.1"
edition = "2021"
rust-version = "1.70"
include = ["src/**/*.rs", "src/**/*.fif", "LICENSE", "README.md"]
license = "LGPL-2.1-or-later"

[[bin]]
name = "fift"
path = "src/main.rs"

[dependencies]
argh = "0.1"

fift = { path = "..", version = "=0.1.1" }
