[package]
name = "fift-cli"
description = "A CLI for the Fift esoteric language interpreter"
repository = "https://github.com/broxus/fift"
version = "0.1.10"
edition = "2021"
rust-version = "1.70"
include = ["src/**/*.rs", "src/**/*.fif", "LICENSE", "README.md"]
license = "LGPL-2.1-or-later"

[[bin]]
name = "fift"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
argh = "0.1"
console = "0.15"
rustyline = { version = "12.0", default-features = false }

fift = { path = "..", version = "=0.1.10" }
