[package]
name = "fift-cli"
description = "A CLI for the Fift esoteric language interpreter"
repository = "https://github.com/broxus/fift"
version = "0.1.23"
edition = "2021"
rust-version = "1.70"
include = ["src/**/*.rs", "src/**/*.fif", "LICENSE", "README.md"]
license = "LGPL-2.1-or-later"

[[bin]]
name = "fift"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
argh = "0.1"
bitflags = "2.3"
console = "0.15"
rustyline = { version = "15.0", default-features = false }
unicode-width = "0.2"

fift = { path = "..", version = "=0.1.23" }
fift-libs = { path = "../libs", version = "0.1.23" }
