[package]
name = "fift-libs"
description = "A maintained collection of default Fift libraries"
repository = "https://github.com/broxus/fift"
version = "0.1.22"
edition = "2021"
rust-version = "1.70"
include = ["src/**/*.rs", "src/**/*.fif", "LICENSE", "LICENSE.fif", "README.md"]
license = "LGPL-2.1-or-later"
