[package]
name = "fift-libs"
description = "A maintained collection of default Fift libraries"
repository = "https://github.com/broxus/fift"
version = "0.2.0"
edition = "2024"
rust-version = "1.88"
include = ["src/**/*.rs", "src/**/*.fif", "LICENSE", "LICENSE.fif", "README.md"]
license = "LGPL-2.1-or-later"
