[package]
name = "fift-proc"
description = "Proc-macro helpers for fift"
repository = "https://github.com/broxus/fift"
version = "0.1.0"
edition = "2021"
include = ["src/**/*.rs", "../LICENSE-*", "../README.md"]
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["visit"] }
darling = "0.20"
