[package]
name = "fift-proc"
description = "Proc-macro helpers for fift"
repository = "https://github.com/broxus/fift"
version = "0.1.15"
edition = "2021"
include = ["src/**/*.rs", "../LICENSE-*", "../README.md"]
license = "MIT OR Apache-2.0"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = "2.0"
darling = "0.20.10"
